# decentralized-ai-agents

./: .env  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
logs/: ai-agents
proto/: ai_service.proto
python/: agent_topics.py  ai_client.py  ai_service_pb2.py  ai_service_pb2_grpc.py  base_agent.py  communication_agent.py  coordinator_agent.py  p2pcli.py  research_agent.py  run_agents.py  test_agents.py  test_connection.py  test_mdns_discovery.py  test_research.py
python/logs/: ai-agents
src/: lib.rs  main.rs  rpc.rs
tests/: network_tests.rs
